--- a/blogs/templates/index.html
+++ b/blogs/templates/index.html
@@ -5,7 +5,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Website Layout | CodingLab</title>
+    <title>| Blogs - Star |</title>
     <link rel="stylesheet" href="style.css" />
     <link
       rel="stylesheet"
@@ -19,7 +19,7 @@
       <nav>
         <div class="menu">
           <div class="logo">
-            <a href="#">CodingLab</a>
+            <a href="{% url 'index' %}">Blogs Star</a>
           </div>
           <ul>
             <li><a href="#">Home</a></li>
