--- a/blogs/static/css/blogs_css/login.css
+++ b/blogs/static/css/blogs_css/login.css
@@ -1,28 +1,41 @@
-.wrapper {
-    margin-left: 30%;
-    margin-top: 8%;
-    margin-bottom: 1%;
-
-    position: relative;
-    max-width: 470px;
+.login-wrapper {
+  width: 100%;
+  margin: 100px 0 80px;
+  .form-block {
+    max-width: 600px;
     width: 100%;
-    border-radius: 12px;
-    padding: 20px
-      30px
-      120px;
-    background: #3ba1c6;
-    box-shadow: 0
-      5px
-      10px
-      rgba(
-        0,
-        0,
-        0,
-        0.1
-      );
-    overflow: hidden;
+    margin: 0 auto;
+    background-color: cadetblue;
+    border-radius: 8px;
+    padding: 20px 30px;
   }
-  .form.login {
+  form {
+    display: flex;
+    flex-direction: column;
+    button {
+      max-width: 200px;
+      margin: 20px auto 0;
+      border-radius: 4px;
+      font-size: 16px;
+      line-height: 16px;
+      padding: 8px;
+      min-height: 40px;
+    }
+  }
+  .error-message {
+    font-size: 12px;
+    color: red;
+    margin: 0;
+  }
+  .signup-txt {
+    text-align: center;
+    color: #fff;
+    font-size: 14px;
+    text-decoration: none;
+    margin: 10px 0 0;
+  }
+}
+  /* .form.login {
     position: absolute;
     left: 50%;
     bottom: -90%;
@@ -149,4 +162,4 @@
     color: rgb(246, 255, 0);
     font-size: 14px;
     margin-top: 5px;
-  }
+  } */
