--- a/blogs/templates/dashboard.html
+++ b/blogs/templates/dashboard.html
@@ -1,5 +1,181 @@
 {% extends 'index.html' %} {% block content %}
 <div class="dashboard">
-    Hello user
+  <!-- <div class="d-flex justify-content-between align-items-center">
+    <a
+      href=""
+      data-bs-toggle="modal" data-bs-target="#exampleModal"
+      class="btn btn-primary px-5 py-2 btn-sm"
+      >Add Blog</a
+    >
+    <div>
+      <form action="" method="post" class="d-flex">
+        {% csrf_token %}
+        <input
+          type="search"
+          value="{{query}}"
+          name="searchquery"
+          class="form-control"
+          placeholder="Search.."
+        />
+        <a class="btn btn-success mx-2" name="search">Search</a>
+      </form>
+    </div>
+  </div> -->
+  <div class="d-flex justify-content-between align-items-center mb-4">
+    <a href="" data-bs-toggle="modal" data-bs-target="#exampleModal" class="btn btn-primary px-5 py-2 btn-sm">Add Blog</a>
+    <div>
+      <form action="{% url 'dashboard' %}" method="post" class="d-flex">
+        {% csrf_token %}
+        <input type="search" value="{{query}}" name="searchquery" class="form-control" placeholder="Search.."/>
+        <!-- <a class="btn btn-success mx-2" name="search">Search</a> -->
+        <button class="btn btn-success mx-2" name="search">Search</button>
+      </form>
+    </div>
+  </div>
+  <div class="dashboard-blog-block">
+      <div class="container">
+        <div class="card-wrap-block">
+            <div class="row">
+                {% for blog in blogs %}
+                <div class="col-lg-4 mb-4">
+                    <div class="card">
+                      <div class="card__header">
+                        <img
+                          src="{{ blog.image.url }}"
+                          alt="card__image"
+                          class="card__image"
+                        />
+                      </div>
+                      <div class="card__body">
+                        <!-- <span class="tag tag-blue">{{ blog.tag }}</span> -->
+                        <h4>{{ blog.title }}</h4>
+                        <p>{{ blog.content }}</p>
+                      </div>
+                      <div class="card__footer">
+                        <div class="user">
+                          <!-- <img
+                            src="{{ blog.added_by.profile_picture.url }}"
+                            alt="user__image"
+                            class="user__image"
+                          /> -->
+                          <div class="user__info">
+                            <h5>{{ blog.added_by.username }}</h5>
+                            <small>{{ blog.publication_date }}</small>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                </div>
+                {% endfor %}
+            </div>
+        </div>
+      </div>
+  </div>
 </div>
+<!-- Modal -->
+<!-- <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h6 class="modal-title fs-5" id="exampleModalLabel">Blog</h6>
+        </div>
+        <div class="modal-body">
+          ...
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-primary" name="add">Add Blog</button>
+        </div>
+      </div>
+    </div>
+  </div> -->
+<!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h6 class="modal-title fs-5" id="exampleModalLabel">Add Blog</h6>
+            </div>
+            <div class="modal-body">
+                <form id="addBlogForm" method="post" enctype="multipart/form-data">
+                    {% csrf_token %}
+                    <!-- Title -->
+                    <div class="mb-3">
+                        <label for="title" class="form-label">Title</label>
+                        <input type="text" class="form-control" id="title" name="title" required>
+                    </div>
+                    <!-- Content -->
+                    <div class="mb-3">
+                        <label for="content" class="form-label">Content</label>
+                        <textarea class="form-control" id="content" name="content" rows="3" required></textarea>
+                    </div>
+                    <!-- Image Upload -->
+                    <div class="mb-3">
+                        <label for="image" class="form-label">Image</label>
+                        <input type="file" class="form-control" id="image" name="image">
+                    </div>
+                </form>
+            </div>
+            <div class="modal-footer">
+                <a type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</a>
+                <button type="button" class="btn btn-primary" id="submitBtn">Add Blog</button>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- Add this code below the block of blogs -->
+{% if blogs.has_other_pages %}
+    <div class="pagination">
+        <span class="step-links">
+            {% if blogs.has_previous %}
+                <a href="?page=1">&laquo; first</a>
+                <a href="?page={{ blogs.previous_page_number }}">previous</a>
+            {% endif %}
+
+            <span class="current">
+                Page {{ blogs.number }} of {{ blogs.paginator.num_pages }}.
+            </span>
+
+            {% if blogs.has_next %}
+                <a href="?page={{ blogs.next_page_number }}">next</a>
+                <a href="?page={{ blogs.paginator.num_pages }}">last &raquo;</a>
+            {% endif %}
+        </span>
+    </div>
+{% endif %}
+
+  
+<script>
+    document.getElementById('submitBtn').addEventListener('click', function() {
+      let form = document.getElementById('addBlogForm');
+      let formData = new FormData(form);
+  
+      fetch('/add-blog/', {
+        method: 'POST',
+        body: formData,
+        headers: {
+          'X-CSRFToken': '{{ csrf_token }}'
+        }
+      })
+      .then(response => response.json())
+      .then(data => {
+        if (data.success) {
+          console.log(data);
+          alert('Blog added successfully!');
+          $('#exampleModal').modal('hide'); 
+          location.reload();
+        } else {
+          console.error('Error adding blog:', data.error);
+        //   alert('Error adding blog. Please try again.');
+        $('#exampleModal').modal('hide'); 
+
+        }
+      })
+      .catch(error => {
+        console.error('Error:', error);
+        alert('Error adding blog. Please try again.');
+      });
+    });
+  </script>
+  
 {% endblock %}
