--- a/blogs/templates/index.html
+++ b/blogs/templates/index.html
@@ -41,6 +41,13 @@
       type="text/css"
       href="{% static 'css/blogs_css/dashboard.css' %}"
     />
+    <link
+    rel="stylesheet"
+    type="text/css"
+    href="{% static 'css/blogs_css/profile.css' %}"
+  />
+  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+
   </head>
   <body>
     <!-- Header -->
@@ -56,10 +63,26 @@
               <a href="{% url 'logout' %}">
                 <button>Logout</button>
               </a>
+              <div class="profile-container">
+                <div class="profile-icon">
+                  <!-- You can place an image or icon here -->
+                  <i class="fas fa-user"></i>
+                </div>
+                <div class="dropdown-menu">
+                  <a href="{% url 'profile' %}" class="dropdown-item">
+                    My Profile
+                  </a>
+                  <a class="dropdown-item" href="{% url 'dashboard' %}">Dashboard</a>
+                  <a class="dropdown-item"  href="{% url 'myblogs' %}">My Blogs</a>
+                </div>
+              </div>
               {% else %}
               <a href="{% url 'login' %}">
                 <button>Login</button>
               </a>
+              <!-- <a href="{% url 'signup' %}">
+                <button>Signup</button>
+              </a> -->
               {% endif %}
             </div>
           </ul>
@@ -253,6 +276,18 @@
         wrapper.classList.remove("active");
       });
       // For signup validation
+      document.addEventListener("click", function(event) {
+      const profileContainer = document.querySelector(".profile-container");
+      if (!profileContainer.contains(event.target)) {
+        const dropdownMenu = document.querySelector(".dropdown-menu");
+        dropdownMenu.style.display = "none";
+      }
+    });
     </script>
+     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
+   
   </body>
 </html>
