--- a/blogs/templates/login.html
+++ b/blogs/templates/login.html
@@ -1,85 +1,76 @@
 {% extends 'index.html' %} {% block content %}
-<section class="wrapper">
-  <div class="form signup">
-    <header>Signup</header>
-        <!-- Display messages -->
-        {% if messages %}
-        <div class="messages">
-          {% for message in messages %}
-          <div class="alert alert-{{ message.tags }}" style="color: yellow;">
-            {{ message }}
+<section class="wrapper login-wrapper">
+  <div class="form-block">
+    <div class="form signup">
+      <div class="form-title mb-3">Login</div>
+          <!-- Display messages -->
+          {% if messages %}
+          <div class="messages">
+            {% for message in messages %}
+            <div class="alert alert-{{ message.tags }}" style="color: yellow;">
+              {{ message }}
+            </div>
+            {% endfor %}
           </div>
-          {% endfor %}
+          {% endif %}
+      <form action="{% url 'login' %}" method="post">
+        {% csrf_token %}
+        <div class="row">
+          <div class="col-lg-6 mb-3">
+            <div class="form-field">
+              <input
+          type="text"
+          id="email"
+          placeholder="Email address"
+          name="email"
+          value="{{ form.email.value }}"
+        />
+        <span id="emailError" class="error-message"></span>
+            </div>
+          </div>
+          <div class="col-lg-6 mb-3">
+            <div class="form-field">
+              <input
+              type="password"
+              id="password"
+              placeholder="Password"
+              name="password"
+              value="{{ form.password.value }}"
+            />
+            <span id="passwordError" class="error-message"></span>
+            </div>
+          </div>
         </div>
-        {% endif %}
-    <form id="signupForm" action="{% url 'register' %}" method="post">
-      {% csrf_token %}
-      <input
-        type="text"
-        id="fullname"
-        placeholder="Full name"
-        name="fullname"
-        value="{{ form.fullname.value }}"
-      />
-      <span id="fullNameError" class="error-message"></span>
-      <input
-        type="text"
-        id="email"
-        placeholder="Email address"
-        name="email"
-        value="{{ form.email.value }}"
-      />
-      <span id="emailError" class="error-message"></span>
-      <input
-        type="password"
-        id="password"
-        placeholder="Password"
-        name="password1"
-        value="{{ form.password1.value }}"
-      />
-      <span id="passwordError" class="error-message"></span>
-      <input
-        type="password"
-        id="confirmPassword"
-        placeholder="Confirm Password"
-        name="password2"
-        value="{{ form.password2.value }}"
-      />
-      <span id="confirmPasswordError" class="error-message"></span>
-      <!-- <div class="checkbox">
-        <input type="checkbox" id="signupCheck" />
-        <label for="signupCheck">I accept all terms & conditions</label>
-      </div> -->
-      <input type="submit" value="Signup" />
-    </form>
+         
+        <button type="submit" value="Login">Submit</button>
+        <a class="signup-txt" type="submit" value="Signup" href="{% url 'signup' %}">Signup</a>
+      </form>
+    </div>
+    <!-- <div class="form login">
+      <div class="form-title mb-3">Login</div>
+      <form action="{% url 'login' %}" method="post">
+        {% csrf_token %}
+        <input
+          type="text"
+          id="email"
+          placeholder="Email address"
+          name="email"
+          value="{{ form.email.value }}"
+        />
+        <span id="emailError" class="error-message"></span>
+        <input
+          type="password"
+          id="password"
+          placeholder="Password"
+          name="password"
+          value="{{ form.password.value }}"
+        />
+        <span id="passwordError" class="error-message"></span>
+        <a href="#">Forgot password?</a>
+        <input type="submit" value="Login" />
+      </form>
+    </div> -->
   </div>
-
-  <div class="form login">
-    <header>Login</header>
-    <form action="{% url 'login' %}" method="post">
-      {% csrf_token %}
-      <input
-        type="text"
-        id="email"
-        placeholder="Email address"
-        name="email"
-        value="{{ form.email.value }}"
-      />
-      <span id="emailError" class="error-message"></span>
-      <input
-        type="password"
-        id="password"
-        placeholder="Password"
-        name="password"
-        value="{{ form.password.value }}"
-      />
-      <span id="passwordError" class="error-message"></span>
-      <a href="#">Forgot password?</a>
-      <input type="submit" value="Login" />
-    </form>
-  </div>
-
-
 
   <script>
     document
